--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: page
 
 {{content}}
 
-{% if site.post-advance-links contains page.category %}
+<!--{% if site.post-advance-links contains page.category %}
     <div class="blog-navigation">
         {% if page.previous.hidden == false and page.previous.url %}
             <a class="prev" href="{{ site.url }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
@@ -34,7 +34,7 @@ layout: page
             <a class="next" href="{{ site.url }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
         {% endif %}
     </div>
-{% endif %}
+{% endif %}-->
 
 {% if site.show-author %}
     {% include author.html %}
