--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -58,3 +58,51 @@
             margin: 1em 0
         .next
             text-align: right
+
+.toc
+    position: absolute
+    right: 0px
+    width: 240px
+    color: #BDBDBD
+    overflow-y: auto
+    overflow-x: hidden
+    padding-left: 0.75rem
+    padding-right: 0.75rem
+    padding-top: 0.25rem
+    padding-bottom: 0.25rem
+    margin-right: 0px
+    font-size: 0.8rem
+    border-left: 2px solid #e0d9e7
+    display: none
+
+    @media (min-width: 75em)
+        width: 240px
+        display: block
+  
+    @media (min-width: 85em)
+        width: 300px
+        display: block
+  
+    @media (min-width: 95em)
+        width: 360px
+        display: block
+  
+    a.toc-active 
+        font-weight: bold
+        transition: all 0.125s ease-in 0s
+        font-size: 0.75rem
+        color: #9075aa
+
+    ul
+        list-style-type: none
+        margin-bottom: 0.1rem
+        padding-left: 0rem
+    li
+        padding-left: .5rem
+
+    a
+        color: #BDBDBD
+        text-decoration: none
+  
+    a:hover
+        color: #000000
