카테고리 페이지 보이게 적용

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,5 +29,13 @@
                 </li>
             {% endif %}
         {% endif %}
+        
+        {% if site.projects == true %}
+            {% if page.title != "Categories" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/categories">Categories</a>
+                </li>
+            {% endif %}
+        {% endif %}
     </ul>
 </nav>
