--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -1,6 +1,7 @@
 .home,
 .blog,
-.projects
+.projects,
+.categories
     margin-top: 125px
 
     > .list
@@ -25,7 +26,8 @@
 
 .home > .list,
 .blog > .list,
-.projects > .list
+.projects > .list,
+.categories > .list
     > .item
         display: block
         width: 95%
@@ -63,7 +65,8 @@
         color: $alpha
 
 .blog > .list > .item > .url,
-.projects > .list > .item > .url
+.projects > .list > .item > .url,
+.categories > .list > .item > .url
     > .title
         display: inline
 
