--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -2,10 +2,8 @@
 layout: archive
 ---
 
-<!--???-->
 {{ content }}
 
-<!--카테고리, 카테고리 메뉴를 안보여줌-->
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
   {% if category[1].size > categories_max %}
@@ -13,7 +11,6 @@ layout: archive
   {% endif %}
 {% endfor %}
 
-<!--카테고리를 보여줌.-->
 <ul class="taxonomy__index">
   {% for i in (1..categories_max) reversed %}
     {% for category in site.categories %}
@@ -28,27 +25,15 @@ layout: archive
   {% endfor %}
 </ul>
 
-<!--카테고이에 있는거 클릭 시 해당 목록으로 이동해줌.-->
+{% assign entries_layout = page.entries_layout | default: 'list' %}
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
     {% if category[1].size == i %}
       <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
         <h2 class="archive__subtitle">{{ category[0] }}</h2>
-        <div class="entries-{{ page.entries_layout | default: 'list' }}">
+        <div class="entries-{{ entries_layout }}">
           {% for post in category.last %}
-            <article class="archive-item">
-              <div>
-                  <span>
-                    <a href="{{ post.url }}">{{post.title}}</a>&nbsp
-                  </span>
-                  <small> 
-                    <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"> </i>{{ post.date | date: " %Y.%m.%d" }}
-                    {% if site.category_archive.type and post.categories[0] and site.tag_archive.type and post.tags[0] %}
-                      {%- include post__taxonomy.html -%}
-                    {% endif %}
-                  </small>
-              </div>
-            </article>
+            {% include archive-single.html type=entries_layout %}
           {% endfor %}
         </div>
         <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
