--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,10 @@
         </footer>
     </div>
 
+    <aside class="sidebar__top">
+        <a href="#site-nav"> <i class="fas fa-angle-double-up fa-2x"></i></a>
+    </aside>
+
     {% include scripts.html %}
 
 </body>
