--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -9,6 +9,8 @@ html {
   box-sizing: border-box;
   background-color: $background-color;
   font-size: 15px;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 400;
 
   @include breakpoint($medium) {
     font-size: 17px;
