포스트와 게시글에 있는 제목 부분 밑에 작성일자 보이게 수정

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -23,6 +23,10 @@
       {% else %}
         <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
+      <!--게시글 제목 밑에 작성일자 보이게-->
+      {% if post.date %}
+      <p class="page__meta"><i class="far fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ post.date | date: "%Y.%m.%d" }}</p>
+      {% endif %}
     </h2>
     {% include page__meta.html type=include.type %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
