사이드바 패딩 제거

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1560,9 +1560,9 @@ $btn-mb: 0.5rem;
 
     $icon-gap: 1rem; // for the bottom icons
 
-    .profile-wrapper {
-      padding-left: 3.5rem;
-    }
+    //.profile-wrapper {
+    //  padding-left: 3.5rem;
+    //}
 
     ul {
       li.nav-item {
