question이랑 example 아이콘 추가

--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -83,6 +83,10 @@
   --prompt-warning-icon-color: rgb(255, 165, 0, 0.8);
   --prompt-danger-bg: rgb(86, 28, 8, 0.8);
   --prompt-danger-icon-color: #cd0202;
+  --prompt-question-bg: rgba(50, 60, 50, 0.8);
+  --prompt-question-icon-color: #b3e6b3;
+  --prompt-example-bg: rgba(70, 50, 80, 0.8);
+  --prompt-example-icon-color: #d1b3ff;
 
   /* tags */
   --tag-border: rgb(59, 79, 88);
