--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -88,6 +88,10 @@
   --prompt-warning-icon-color: #ef9c03;
   --prompt-danger-bg: rgb(248, 215, 218, 0.56);
   --prompt-danger-icon-color: #df3c30;
+  --prompt-question-bg: rgba(230, 255, 230, 0.8);
+  --prompt-question-icon-color: #66cc66;
+  --prompt-example-bg: rgba(240, 230, 255, 0.8);
+  --prompt-example-icon-color: #b266ff;
 
   [class^='prompt-'] {
     --link-underline-color: rgb(219, 216, 216);
