--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -84,12 +84,10 @@
   --prompt-tip-icon-color: #03b303;
   --prompt-info-bg: #e1f5fe;
   --prompt-info-icon-color: #0070cb;
-  --prompt-warning-bg: rgb(255, 243, 205);
-  --prompt-warning-icon-color: #ef9c03;
-  --prompt-danger-bg: rgb(248, 215, 218, 0.56);
-  --prompt-danger-icon-color: #df3c30;
-  --prompt-question-bg: rgba(230, 255, 230, 0.8);
-  --prompt-question-icon-color: #66cc66;
+  --prompt-warning-bg: rgb(248, 215, 218, 0.56);
+  --prompt-warning-icon-color: #df3c30;
+  --prompt-question-bg: rgb(255, 243, 205);
+  --prompt-question-icon-color: #ef9c03;
   --prompt-example-bg: rgba(240, 230, 255, 0.8);
   --prompt-example-icon-color: #b266ff;
 
