mac 브라우저 창처럼 색깔 지정

--- a/_sass/addon/syntax.scss
+++ b/_sass/addon/syntax.scss
@@ -261,9 +261,9 @@ div {
         width: $dot-size;
         height: $dot-size;
         border-radius: 50%;
-        background-color: var(--code-header-muted-color);
-        box-shadow: ($dot-size + $dot-margin) 0 0 var(--code-header-muted-color),
-          ($dot-size + $dot-margin) * 2 0 0 var(--code-header-muted-color);
+        background-color: var(--code-header-red-color);
+        box-shadow: ($dot-size + $dot-margin) 0 0 var(--code-header-yellow-color),
+          ($dot-size + $dot-margin) * 2 0 0 var(--code-header-green-color);
       }
     }
   }
