--- a/_sass/colors/dark-syntax.scss
+++ b/_sass/colors/dark-syntax.scss
@@ -9,7 +9,10 @@
   --highlight-lineno-color: #6c6c6d;
   --inline-code-bg: #272822;
   --code-header-text-color: #6a6a6a;
-  --code-header-muted-color: rgb(60, 60, 60);
+  //--code-header-muted-color: rgb(60, 60, 60);
+  --code-header-red-color: #ed594a;
+  --code-header-yellow-color: #fdd800;
+  --code-header-green-color: #5ac05a;
   --code-header-icon-color: rgb(86, 86, 86);
   --clipboard-checked-color: #2bcc2b;
   --filepath-text-color: #bdbdbd;
