--- a/_sass/colors/light-syntax.scss
+++ b/_sass/colors/light-syntax.scss
@@ -73,7 +73,10 @@
   --highlight-lineno-color: #c2c6cc;
   --inline-code-bg: #f6f6f7;
   --code-header-text-color: #a3a3b1;
-  --code-header-muted-color: #ebebeb;
+  //--code-header-muted-color: #ebebeb;
+  --code-header-red-color: #ed594a;
+  --code-header-yellow-color: #fdd800;
+  --code-header-green-color: #5ac05a;
   --code-header-icon-color: #d1d1d1;
   --clipboard-checked-color: #43c743;
 
