게시물마다 제목 글씨는 bold 적용

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -378,6 +378,7 @@ i {
   h1 {
     margin-top: 2rem;
     margin-bottom: 1.5rem;
+    font-weight: bold;
   }
 
   p {
@@ -1418,6 +1419,7 @@ $btn-mb: 0.5rem;
   .post {
     h1 {
       margin-top: 3rem;
+      font-weight: bold;
     }
   }
 
