change tag name

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -222,7 +222,7 @@ i {
     position: sticky;
   }
 
-  > div {
+  > section {
     padding-left: 1rem;
     border-left: 1px solid var(--main-border-color);
 
