--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -79,10 +79,10 @@
   --prompt-tip-icon-color: rgb(15, 164, 15, 0.81);
   --prompt-info-bg: rgb(7, 59, 104, 0.8);
   --prompt-info-icon-color: #0075d1;
-  --prompt-warning-bg: rgb(86, 28, 8, 0.8);
-  --prompt-warning-icon-color: #cd0202;
-  --prompt-question-bg: rgb(90, 69, 3, 0.88);
-  --prompt-question-icon-color: rgb(255, 165, 0, 0.8);
+  --prompt-warning-bg: rgb(90, 69, 3, 0.88);
+  --prompt-warning-icon-color: rgb(255, 165, 0, 0.8);
+  --prompt-danger-bg: rgb(86, 28, 8, 0.8);
+  --prompt-danger-icon-color: #cd0202;
   --prompt-example-bg: rgba(70, 50, 80, 0.8);
   --prompt-example-icon-color: #d1b3ff;
 
